--- a/main.tex
+++ b/main.tex
@@ -13,6 +13,8 @@
 \usepackage{amsmath}
 \usepackage{svg}
 \usepackage{hyperref}
+\usepackage{pdflscape}
+\usepackage{mwe}
 
 \usepackage[style=ieee]{biblatex}
 \usepackage{csquotes}
@@ -51,6 +53,7 @@
 \input{sections/objetivos.tex}
 \input{sections/actividades.tex}
 \input{sections/marco_teorico.tex}
+\input{sections/simulaciones_36v.tex}
 \input{sections/implementacion.tex}
 \input{sections/diseño.tex}
 \input{sections/PCB.tex}
