--- a/sections/apendice.tex
+++ b/sections/apendice.tex
@@ -14,5 +14,26 @@
     \label{fig:simulacion_carga}
 \end{figure}
     
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\linewidth]{images/sim-full-1.png}
+    \caption{Circuito simulado en LTspice. Se separa cada bloque con línea punteada. Se muestra el recitificador de entrada, el conversor DC-DC y parte del circuito de control.}
+    \label{fig:sim-full-1}
+\end{figure}
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\linewidth]{images/sim-full-2.png}
+    \caption{Circuito simulado en LTspice. Se muestra el modelo de batería utilizado y el resto del circuito de control.}
+    \label{fig:sim-full-2}
+\end{figure}
+
+\begin{figure}[hbt]
+    \centering
+    \includegraphics[width=\linewidth]{images/sim-final.png}
+    \caption{Circuito final simulado en LTspice}
+    \label{fig:sim-final}
+\end{figure}
+
 \end{landscape}
 \restoregeometry
